--- a/Assignment 3/Q1.html
+++ b/Assignment 3/Q1.html
@@ -1,1 +1,130 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>E-Commerce Product Table</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
+      padding: 20px;
+    }
+
+    h1 {
+      text-align: center;
+      color: #333;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+    }
+
+    caption {
+      caption-side: top;
+      font-size: 1.5em;
+      margin-bottom: 10px;
+    }
+
+    th, td {
+      border: 1px solid #ccc;
+      padding: 10px;
+      text-align: center;
+    }
+
+    thead {
+      background-color: #343a40;
+      color: white;
+    }
+
+    tfoot td {
+      font-weight: bold;
+      text-align: right;
+      background-color: #eee;
+    }
+
+    .electronics {
+      background-color: #f2f2f2;
+    }
+
+    .kitchen {
+      background-color: #dff0d8;
+    }
+
+    .furniture {
+      background-color: #f9f2f4;
+    }
+  </style>
+</head>
+<body>
+  <h1>E-Commerce Product List</h1>
+  <table>
+    <caption>Product Details</caption>
+    <thead>
+      <tr>
+        <th>Product ID</th>
+        <th>Name</th>
+        <th>Category</th>
+        <th>Price ($)</th>
+        <th>Discount (%)</th>
+        <th>Final Price ($)</th>
+        <th>Rating</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr class="electronics">
+        <td>101</td>
+        <td>Wireless Mouse</td>
+        <td>Electronics</td>
+        <td>25.00</td>
+        <td>10</td>
+        <td>22.50</td>
+        <td>★★★★☆</td>
+      </tr>
+      <tr class="kitchen">
+        <td>102</td>
+        <td>Coffee Mug</td>
+        <td>Kitchen</td>
+        <td>15.00</td>
+        <td>5</td>
+        <td>14.25</td>
+        <td>★★★☆☆</td>
+      </tr>
+      <tr class="furniture">
+        <td>103</td>
+        <td>Office Chair</td>
+        <td>Furniture</td>
+        <td>150.00</td>
+        <td>20</td>
+        <td>120.00</td>
+        <td>★★★★★</td>
+      </tr>
+      <tr class="electronics">
+        <td>104</td>
+        <td>Desk Lamp</td>
+        <td>Electronics</td>
+        <td>30.00</td>
+        <td>15</td>
+        <td>25.50</td>
+        <td>★★★★☆</td>
+      </tr>
+      <tr class="kitchen">
+        <td>105</td>
+        <td>Water Bottle</td>
+        <td>Kitchen</td>
+        <td>12.00</td>
+        <td>10</td>
+        <td>10.80</td>
+        <td>★★★☆☆</td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <td colspan="7">Total Products: 5</td>
+      </tr>
+    </tfoot>
+  </table>
+</body>
+</html>
 
